7902243: Load and instantiate classes more elegantly
Reviewed-by: jjg