@@ -76,8 +76,10 @@ public class ReverseTestFinder extends TestFinder
                      TestEnvironment env) throws Fault {
          String delegateClassName = args[0];
          try {
-             Class<?>  delegateClass = Class.forName(delegateClassName, true, ClassLoader.getSystemClassLoader());
-             delegate = (TestFinder)(delegateClass.newInstance());
+             Class<? extends TestFinder> delegateClass =
+                     Class.forName(delegateClassName, true, ClassLoader.getSystemClassLoader())
+                             .asSubclass(TestFinder.class);
+             delegate = delegateClass.getDeclaredConstructor().newInstance();
              args = shift(args, 1);
              delegate.init(args, testSuiteRoot, env);
          }
